tests/fixtures/errors/invalid_import_url.puml
@startuml
!import https://example.com/lib.puml
Alice -> Bob: unreachable
@enduml
